# Nexus

./: .gitignore  .gitmodules  Cargo.toml  features.md
.github/workflows/: lsp-release.yml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: error.rs  lib.rs  span.rs
crates/nexus-interpreter/: Cargo.toml
crates/nexus-interpreter/src/: lib.rs  scope.rs  value.rs
crates/nexus-interpreter/src/builtins/: bitwise.rs  collections.rs  compat_fs.rs  compat_io.rs  compat_proc.rs  conversions.rs  docs.json5  f32_ops.rs  f64_ops.rs  i32_ops.rs  i64_ops.rs  logical.rs  macros.rs  mod.rs  plat_console.rs  rune_ops.rs  strings.rs  utility.rs
crates/nexus-lexer/: Cargo.toml
crates/nexus-lexer/src/: lib.rs  token.rs
crates/nexus-lsp/: Cargo.toml
crates/nexus-lsp-server/: Cargo.toml  build.rs
crates/nexus-lsp-server/src/: builtins.rs  completions.rs  diagnostics.rs  document_symbols.rs  goto_definition.rs  hover.rs  lib.rs  macro_expansion.rs  main.rs  types.rs  utils.rs
crates/nexus-parser/: Cargo.toml
crates/nexus-parser/src/: ast.rs  lib.rs  parser.rs
crates/nexus-permissions/: Cargo.toml
crates/nexus-permissions/src/: lib.rs
crates/nexus-project/: Cargo.toml
crates/nexus-project/src/: config.rs  dependency.rs  lib.rs  resolver.rs  test_runner.rs
crates/nexus-sandbox/: Cargo.toml
crates/nexus-sandbox/src/: lib.rs
crates/nexus-test-runner/: Cargo.toml
crates/nexus-test-runner/src/: lib.rs
crates/nexus-test-runner/tests/: samples.rs
crates/nexus-transpiler-c/: Cargo.toml
crates/nexus-transpiler-c/src/: codegen.rs  lib.rs  runtime.rs  typechecker.rs
crates/nexus-transpiler-c/src/runtime_includes/: array.c  compat_io.c  compat_process.c  compat_time.c  error.c  error_nobounds.c  interface.c  memory.c  nexus_core.h  platform.c  std_builtins.c  string.c  unknown.c
crates/nexus-types/: Cargo.toml
crates/nexus-types/src/: interface.rs  lib.rs  primitives.rs  structs.rs  unknown.rs
editors/zed/: .gitignore  Cargo.toml  README.txt  extension.toml
editors/zed/languages/nexus/: config.toml
editors/zed/src/: lib.rs
samples/arithmetic/: expected.out  main.nx  nexus.json5
samples/arrays/: expected.out  main.nx  nexus.json5
samples/conditionals/: expected.out  main.nx  nexus.json5
samples/fibonacci/: expected.out  iterative.nx  main.nx  nexus.json5
samples/format_macro/: expected.out  main.nx  nexus.json5
samples/functions/: expected.out  main.nx  nexus.json5
samples/generic_collections/: expected.out  main.nx  nexus.json5
samples/hello/: expected.out  main.nx  nexus.json5
samples/interfaces/: expected.out  main.nx  nexus.json5
samples/multimodule/: expected.out  main.nx  nexus.json5  test.nx
samples/multimodule/mathlib/: lib.nx  nexus.json5  test.nx
samples/multimodule/utils/: lib.nx  nexus.json5  test.nx
samples/multimodule_same_names/: expected.out  main.nx  nexus.json5  test.nx
samples/multimodule_same_names/module_a/: lib.nx  nexus.json5  test.nx
samples/multimodule_same_names/module_b/: lib.nx  nexus.json5  test.nx
samples/structs/: expected.out  main.nx  nexus.json5
samples/structs_defaults/: expected.out  main.nx  nexus.json5
samples/structs_edge_cases/: expected.out  main.nx  nexus.json5
samples/trees/: expected.out  main.nx  nexus.json5
samples/variables/: expected.out  main.nx  nexus.json5
stdlib/std/: lib.nx  nexus.json5
stdlib/std/collections/: lib.nx
stdlib/std/collections/generics/: lib.nx
stdlib/std/collections/maps/: lib.nx
stdlib/std/collections/sets/: lib.nx
stdlib/std/util/: lib.nx
stdlib/std/util/strings/: lib.nx
stdlib/std/util/testing/: lib.nx
