[package]
name = "nexus-interpreter"
version.workspace = true
edition.workspace = true

[features]
default = []
builtin-docs = ["serde", "json5"]

[dependencies]
nexus-core = { workspace = true }
nexus-lexer = { workspace = true }
nexus-parser = { workspace = true }
nexus-types = { workspace = true }
nexus-permissions = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "2"
serde = { workspace = true, optional = true }
json5 = { workspace = true, optional = true }
