[package]
name = "nexus-lsp-server"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol server for the Nexus programming language"

[features]
default = ["builtin-docs"]
builtin-docs = ["nexus-interpreter/builtin-docs"]

[[bin]]
name = "nexus-lsp"
path = "src/main.rs"

[dependencies]
nexus-types.workspace = true
nexus-parser.workspace = true
nexus-core.workspace = true
nexus-interpreter = { workspace = true, features = ["builtin-docs"] }

lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
